fixed overlapping items

--- a/css/template.css
+++ b/css/template.css
@@ -262,7 +262,7 @@ footer{
 		display: block;
 		width:100%;
 		position: fixed;
-		top:1.5em;
+		top:3em;
 		left:0;
 		padding: 0;
 		margin-top:5px;
